Navmenu fix long overflowing titles

--- a/src/react-mui-layout/NavMenu.scss
+++ b/src/react-mui-layout/NavMenu.scss
@@ -91,12 +91,16 @@
             transition: opacity 0.2s;
             font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
             transition-delay: 0.1s;
+            max-height: 1rem;
+            overflow: hidden;
          }
    
          .MuiBadge-root {
             flex-direction: column;
             justify-content: center;
-            align-items: center;
+            align-items: center;  
+            width: 100%;          
+
             .MuiBadge-badge {
                min-width: 14px;
                height: 14px;
@@ -147,12 +151,18 @@
          flex-grow: 0;
          color: var(--theme-palette-grey-700);
 
-         .link-label{ font-size: 0.7rem; }
+         .link-label{ 
+            font-size: 0.7rem; 
+            max-height: 2rem;
+         }
          .MuiSvgIcon-root{ 
             color: var(--theme-palette-grey-500); 
             font-size: 1.9rem;
             width: 1.9rem;
             height: 1.9rem;
+            &.no-icon{
+               overflow: hidden;
+            }
          }
          .MuiButtonBase-root{
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
@@ -205,6 +215,9 @@
             font-size: 1.8rem;
             width: 1.8rem;
             height: 1.8rem;
+            &.no-icon{
+               line-height: 1.75rem;               
+            }
          }
          h2.MuiSvgIcon-root {
             font-size: 1rem;
@@ -212,6 +225,8 @@
          }
          .link-label {
             font-size: 1rem;
+            text-align: left;
+            max-height: 2.36rem;
          }
       }
       &.active .MuiButtonBase-root{
